--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "e-commerce agriculture",
   "main": "app.js",
   "scripts": {
-      "start": "nodemon app"
+    "start": "nodemon app"
   },
   "author": "Reihan Agam & Halim Hasannudin",
   "license": "MIT",
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1"
   }
 }
