--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "e-commerce agriculture",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon app.js"
   },
   "author": "Reihan Agam & Halim Hasannudin",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.2"
   }
 }
