--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "uuid": "^3.3.3"
   }
 }
