--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.17.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "xoauth2": "^1.2.0"
   }
 }
