--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-timestamp": "^0.1.4",
     "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
